kuber/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product
  namespace: lanchonete
  labels:
    app: lanchonete
    environment: production
spec:
  replicas: 1
  selector:
    matchLabels:
      app: lanchonete
  template:
    metadata:
      labels:
        app: lanchonete
    spec:
      serviceAccountName: product-service-account
      containers:
        - name: product
          image: <ECR_REPOSITORY_URL>:latest
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 10
          resources:
            limits:
              memory: "512Mi"
              cpu: "300m"
            requests:
              memory: "256Mi"
              cpu: "300m"
