kuber/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: lanchonete-alb
  namespace: lanchonete
  labels:
    app: lanchonete
    environment: production
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "alb"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  type: LoadBalancer
  selector:
    app: lanchonete
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
