kuber/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-lanchonete
  namespace: lanchonete
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}]'
spec:
  ingressClassName: alb
  rules:
    http:
      paths:
        - path: /product
          pathType: Prefix
          backend:
            service:
              name: product-service
              port:
                number: 8080
        - path: /order-payment
          pathType: Prefix
          backend:
            service:
              name: order-payment-service
              port:
                number: 8080
        - path: /order
          pathType: Prefix
          backend:
            service:
              name: order-service
              port:
                number: 8080
